small changed in style

--- a/WPF_Encyclopedia.html
+++ b/WPF_Encyclopedia.html
@@ -12,11 +12,13 @@
  *--------------------------------------------------------------------------------------------*/
 
 body {
-	font-family: var(--vscode-markdown-font-family, -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI", "Ubuntu", "Droid Sans", sans-serif);
+	font-family: 'Cascadia Code', monospace; /*var(--vscode-markdown-font-family, -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI", "Ubuntu", "Droid Sans", sans-serif);*/
 	font-size: var(--vscode-markdown-font-size, 14px);
 	padding: 0 26px;
 	line-height: var(--vscode-markdown-line-height, 22px);
 	word-wrap: break-word;
+	background-color: #1e1e1e;
+	color: #ffffff; /* Text color in dark mode */
 }
 
 #code-csp-warning {
