index.html content added

--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0;url=WPF_Encyclopedia.html">
-    <title>Redirecting...</title>
+    <title>Public Nodes of Tim Paasche</title>
 </head>
 <body>
-    <p>If you are not redirected, <a href="WPF_Encyclopedia.html">click here</a>.</p>
+    <h1>Public Nodes of Tim Paasche</h1>
+    <p>
+        This is a helper page where public notes and quick helpers can be shared by m"
+    </p>
+    <br>
+    <h4>TOC of the Public Nodes</h4>
+    <ul>
+        <li><a href="WPF_Encyclopedia.html">WPF_Encyclopdia</a></li>
+    </ul>
 </body>
 </html>
